Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56460

Failing fromMSecs/toMSecs round-trip tests on OSX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • None
    • 5.6, 5.7, 5.8
    • Core: Date/Time
    • None
    • OS/X
    • macOS
    • 6e3f58cbbe313c3b843f69f3110e3c795fef6da8

      Test[ing [0] revealed [1] errors on Mac OS/X: two time-zones fail for every tested time (hourly, at half past each hour, in an interval of 1970 when some of America was doing a fall-back).
      Australia/Lord_Howe was off by 10 hours, Europe/Vaduz was off by an hour.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            Eddy Edward Welbourne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes