src/corelib/tools/qdatetime_p.h
@@ -134,6 +134,7 @@ public:
 
 #if QT_CONFIG(timezone)
     static qint64 zoneMSecsToEpochMSecs(qint64 msecs, const QTimeZone &zone,
+                                        DaylightStatus hint = UnknownDaylightTime,
                                         QDate *localDate = 0, QTime *localTime = 0);
 #endif // timezone
 
